--- a/Sample-SpringBoot-Application/src/main/resources/application.properties
+++ b/Sample-SpringBoot-Application/src/main/resources/application.properties
@@ -3,8 +3,8 @@ spring.application.name=Sample-SpringBoot-Application
 server.port=9001
 
 spring.datasource.url=jdbc:oracle:thin:@host.docker.internal:1521:xe
-spring.datasource.username=SYS AS SYSDBA
-spring.datasource.password=Hokage@72
+spring.datasource.username=<userame here>
+spring.datasource.password=<password here>
 spring.datasource.driver-class-name=oracle.jdbc.driver.OracleDriver
 spring.jpa.database-platform = org.hibernate.dialect.Oracle8iDialect
 
