Adding Model Mapper library

--- a/Sample-SpringBoot-Application/pom.xml
+++ b/Sample-SpringBoot-Application/pom.xml
@@ -30,6 +30,11 @@
     		<artifactId>jaxrs-ri</artifactId>
 		</dependency>
 		<dependency>
+    		<groupId>org.modelmapper</groupId>
+    		<artifactId>modelmapper</artifactId>
+   		 	<version>3.2.0</version>
+		</dependency>
+		<dependency>
 			<groupId>com.oracle.database.jdbc</groupId>
 			<artifactId>ojdbc11</artifactId>
 			<scope>runtime</scope>
